# MNIST-diffusion

./: .gitignore  pyproject.toml  train.py
src/: data.py
src/model/: ConvNeXt.py  ViT.py  __init__.py  util.py
